--- a/cody/ClientApp/public/index.css
+++ b/cody/ClientApp/public/index.css
@@ -9,6 +9,8 @@ body {
 }
 
 #ringContainer {
+  position: absolute;
+  top: 0px;
   width: 100vw;
   height: 100vh;
   background-color: var(--background-color);
