--- a/cody/ClientApp/public/error/error.css
+++ b/cody/ClientApp/public/error/error.css
@@ -1,4 +1,3 @@
-
 :root {
   --offline-alert-color: black;
   --button-background: #1F4BFF;
@@ -17,6 +16,12 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 }
+
+
+.error-title {
+  text-align: center;
+}
+
 
 .button {
   background-color: var(--button-background);
@@ -38,3 +43,7 @@ html {
   width: 70%;
   max-width: 480px;
 }
+
+.fill-primary   { fill: #1F4BFF; }
+.fill-secondary { fill: #4175DC; }
+.fill-tertiary  { fill: #759BE6; }
