--- a/cody/ClientApp/public/index.css
+++ b/cody/ClientApp/public/index.css
@@ -19,9 +19,8 @@ body {
 
 #ringContainer {
   position: absolute;
-  top: 0px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .dynamic-background {
