--- a/cody/ClientApp/public/index.css
+++ b/cody/ClientApp/public/index.css
@@ -1,8 +1,11 @@
 body {
   margin: 0px;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 :root {
+  height: 100%;
   --ring-inner-color: #f3f3f3;
   --ring-outer-color: #1F4BFF;
   --background-color: #f7f7f8;
